--- a/configs/config_single_image.yaml
+++ b/configs/config_single_image.yaml
@@ -90,6 +90,10 @@ validation_data:
   # scale of noise prior, i.e. the scale of inversion noises
   noise_prior: 0
 
+  # Random seed for validation video generation (optional)
+  # If not specified or null, random seed will be used
+  seed: null
+
 # Learning rate for AdamW
 learning_rate: 5e-4
 
